fixing responsive bug on mobile

--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -52,6 +52,10 @@ html {
     line-height: 7rem;
     text-transform: uppercase;
     text-align: center;
+    @media (max-width: 800px) {
+        font-size: 4rem;
+        line-height: 5rem;
+    }
 }
 
 @mixin heading-2 {
