--- a/src/style/_intro.scss
+++ b/src/style/_intro.scss
@@ -51,6 +51,17 @@
     }
 }
 
+@media (max-width: 500px) {
+    .introContent{
+        .trumpFigure {
+            display:none;
+        }
+        .introText {
+            width: 80%;
+        }
+    }
+}
+
 
 
 
